--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
       <!-- Баннер -->
       <section class="banner">
-        <h1 class="banner-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="banner-title">Эффективные решения </br> для вашего бизнеса</h1>
         <a href="" class="buttom primarys">Заказать услугу</a>
       </section>
       <!-- Частина Переваги -->
