--- a/index.html
+++ b/index.html
@@ -28,16 +28,11 @@
         </nav>
         <ul class="connection">
           <li class="items">
-            <a href="mailto:http://info@devstudio.com">
-              <img
-                src="./images/envelope.svg"
-                alt="Конверт"
-              />info@devstudio.com</a
-            >
+            <a class="mail" href="mailto:http://info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="items">
-            <a href="tel:+380961111111"
-              ><img src="./images/phone.svg" alt="Телефон" />+38 096 111 11
+            <a class="phone" href="tel:+380961111111"
+              >+38 096 111 11
               11</a
             >
           </li>
@@ -56,9 +51,6 @@
         <div class="container">
           <ul class="advantages-title">
             <li class="items">
-              <a href="" class="icon"
-                ><img src="./images/antenna.svg" alt="Спутнік"
-              /></a>
               <h3 class="section-title">Внимание к деталям</h3>
               <p>
                 Идейные соображения, а также начало повседневной работы по
@@ -66,9 +58,6 @@
               </p>
             </li>
             <li class="items">
-              <a href="" class="icon"
-                ><img src="./images/clock.svg" alt="Спутнік"
-              /></a>
               <h3 class="section-title">Пунктуальность</h3>
               <p>
                 Задача организации, в особенности же рамки и место обучения
@@ -76,9 +65,6 @@
               </p>
             </li>
             <li class="items">
-              <a href="" class="icon"
-                ><img src="./images/diagram1.svg" alt="Спутнік"
-              /></a>
               <h3 class="section-title">Планирование</h3>
               <p>
                 Равным образом консультация с широким активом в значительной
@@ -86,9 +72,6 @@
               </p>
             </li>
             <li class="items">
-              <a href="" class="icon"
-                ><img src="./images/astronaut1.svg" alt="Спутнік"
-              /></a>
               <h3 class="section-title">Современные технологии</h3>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
@@ -129,24 +112,16 @@
               <p class="own-skills">Product Designer</p>
               <ul class="logotips">
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/instagram2.svg" alt="Instagram"
-                  /></a>
+                  <a class="social instagram" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/twitter1.svg" alt="Twitter"
-                  /></a>
+                  <a class="social twitter" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/facebook1.svg" alt="Facebook"
-                  /></a>
+                  <a class="social facebook" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/linkedin1.svg" alt="in"
-                  /></a>
+                  <a class="social linked" href="" class="icon"></a>
                 </li>
               </ul>
             </li>
@@ -156,24 +131,16 @@
               <p class="own-skills">Frontend Developer</p>
               <ul class="logotips">
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/instagram2.svg" alt="Instagram"
-                  /></a>
+                  <a class="social instagram" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/twitter1.svg" alt="Twitter"
-                  /></a>
+                  <a class="social twitter" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/facebook1.svg" alt="Facebook"
-                  /></a>
+                  <a class="social facebook" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/linkedin1.svg" alt="in"
-                  /></a>
+                  <a class="social linked" href="" class="icon"></a>
                 </li>
               </ul>
             </li>
@@ -183,24 +150,16 @@
               <p class="own-skills">Marketing</p>
               <ul class="logotips">
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/instagram2.svg" alt="Instagram"
-                  /></a>
+                  <a class="social instagram" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/twitter1.svg" alt="Twitter"
-                  /></a>
+                  <a class="social twitter" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/facebook1.svg" alt="Facebook"
-                  /></a>
+                  <a class="social facebook" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/linkedin1.svg" alt="in"
-                  /></a>
+                  <a class="social linked" href="" class="icon"></a>
                 </li>
               </ul>
             </li>
@@ -210,24 +169,16 @@
               <p class="own-skills">UI Designer</p>
               <ul class="logotips">
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/instagram2.svg" alt="Instagram"
-                  /></a>
+                  <a class="social instagram" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/twitter1.svg" alt="Twitter"
-                  /></a>
+                  <a class="social twitter" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/facebook1.svg" alt="Facebook"
-                  /></a>
+                  <a class="social facebook" href="" class="icon"></a>
                 </li>
                 <li>
-                  <a href="" class="icon"
-                    ><img src="./images/linkedin1.svg" alt="in"
-                  /></a>
+                  <a class="social linked" href="" class="icon"></a>
                 </li>
               </ul>
             </li>
@@ -291,24 +242,16 @@
           <b>Присоединяйтесь</b>
           <ul class="connect-icon">
             <li class="icon">
-              <a href="" class="icon"
-                ><img src="./images/instagram2.svg" alt="Instagram"
-              /></a>
+              <a href="" class="icon-instagram"></a>
             </li>
             <li class="icon">
-              <a href="" class="icon"
-                ><img src="./images/twitter1.svg" alt="Twitter"
-              /></a>
+              <a href="" class="icon-twitter"></a>
             </li>
             <li class="icon">
-              <a href="" class="icon"
-                ><img src="./images/facebook1.svg" alt="Facebook"
-              /></a>
+              <a class="icon-face" href="" class="icon"></a>
             </li>
             <li class="icon">
-              <a href="" class="icon"
-                ><img src="./images/linkedin1.svg" alt="in"
-              /></a>
+              <a class="icon-linked" href="" class="icon"></a>
             </li>
           </ul>
         </div>
