--- a/portfolio.html
+++ b/portfolio.html
@@ -28,18 +28,12 @@
         </nav>
         <ul class="connection">
           <li class="items">
-            <a href="mailto:http://info@devstudio.com">
-              <img
-                src="./images/envelope.svg"
-                alt="Конверт"
-              />info@devstudio.com</a
+            <a class="mail" href="mailto:http://info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
           <li class="items">
-            <a href="tel:+380961111111"
-              ><img src="./images/phone.svg" alt="Телефон" />+38 096 111 11
-              11</a
-            >
+            <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -188,24 +182,16 @@
           <b>Присоединяйтесь</b>
           <ul class="connect-icon">
             <li class="icon">
-              <a href="" class="icon"
-                ><img src="./images/instagram2.svg" alt="Instagram"
-              /></a>
+              <a href="" class="icon-instagram"></a>
             </li>
             <li class="icon">
-              <a href="" class="icon"
-                ><img src="./images/twitter1.svg" alt="Twitter"
-              /></a>
+              <a href="" class="icon-twitter"></a>
             </li>
             <li class="icon">
-              <a href="" class="icon"
-                ><img src="./images/facebook1.svg" alt="Facebook"
-              /></a>
+              <a class="icon-face" href="" class="icon"></a>
             </li>
             <li class="icon">
-              <a href="" class="icon"
-                ><img src="./images/linkedin1.svg" alt="in"
-              /></a>
+              <a class="icon-linked" href="" class="icon"></a>
             </li>
           </ul>
         </div>
