--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,19 @@
         </nav>
         <ul class="connection">
           <li class="items">
-            <a class="mail" href="mailto:http://info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="mail" href="mailto:http://info@devstudio.com">
+              <svg class="envelope">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="items">
-            <a class="phone" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="phone" href="tel:+380961111111">
+              <svg class="smartphone">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -175,23 +182,37 @@
             <a href="" class="address-first">г. Киев, пр-т Леси Украинки, 26</a
             ><br />
             <a href="" class="address-second">info@example.com</a><br />
-            <a href="" class="address-second">+38 099 111 11 11</a>
+            <a href="" class="address-seconds">+38 099 111 11 11</a>
           </address>
         </div>
         <div class="connect">
           <b>Присоединяйтесь</b>
           <ul class="connect-icon">
             <li class="icon">
-              <a href="" class="icon-instagram"></a>
+              <a href="" class="icon-pic"
+                ><svg width="20" height="20" class="footer-icon">
+                  <use
+                    href="./images/symbol-defs.svg#icon-instagram"
+                  ></use></svg
+              ></a>
             </li>
             <li class="icon">
-              <a href="" class="icon-twitter"></a>
+              <a href="" class="icon-pic"
+                ><svg width="20" height="20" class="footer-icon">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use></svg
+              ></a>
             </li>
             <li class="icon">
-              <a class="icon-face" href="" class="icon"></a>
+              <a href="" class="icon-pic"
+                ><svg width="20" height="20" class="footer-icon">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use></svg
+              ></a>
             </li>
             <li class="icon">
-              <a class="icon-linked" href="" class="icon"></a>
+              <a href="" class="icon-pic"
+                ><svg width="20" height="20" class="footer-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
