--- a/portfolio.html
+++ b/portfolio.html
@@ -36,10 +36,11 @@
             >
           </li>
           <li class="items">
-            <a class="phone" href="tel:+380961111111">
-              <svg class="smartphone">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use></svg
-              >+38 096 111 11 11</a
+            <a class="phone" href="tel:+380961111111"
+              ><svg class="smartphone">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
